--- a/Notebooks/valb_EDA.Rmd
+++ b/Notebooks/valb_EDA.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "raw_valb_EDA"
 output: html_document
-date: "2025-06-04"
+date: "2025-06-08"
 ---
 
 ```{r setup, include=FALSE}
@@ -10,6 +10,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 # Introduction
 
+This document will be responsible for extracting the `long-beach-va.data` file containing the raw data et, comprising **200 patient records** with **76 attributes**, including the target variable. The data is stored in an unconventional format: although it's a plain text file with space-separated values, **each patient record spans 10 rows**, and there are no header names provided in the data set specifically. The end of each record is indicated by the final field labeled `"name"`.
 
 ## Importing Libraries
 
@@ -19,19 +20,8 @@ library(ggplot2)
 library(corrplot)
 library(readr)
 library(dplyr)
-```
 
-## Importing Data
-
-```{r data}
-va_lb_raw <- read.csv("../Data/Raw/long-beach-va.data",
-                      header = FALSE)
-
-dim(va_lb_raw)
-```
-
-the data is in one variable, with "name" being the separator
-```{r}
+# set the column names per the heart-disease.names text file
 full_cols <- c(
   "id",       # 1. patient ID
   "ccf",      # 2. ccf (social security #; now dummy)
@@ -110,6 +100,209 @@ full_cols <- c(
   "junk",     # 75. not used
   "name"      # 76. last name (dummy string)
 )
+```
+
+## Importing Data
+
+```{r data}
+# using readLines, to read in each line of the long-beach-va.data file
+# read_table, read_csv proved difficult to use to extract
+# outline is to use the occurrence of 'name' to distinguish unique observations
+# extract all the lines
+raw_lines <- readLines("../Data/Raw/long-beach-va.data")
+# merge all lines into one string
+all_text <- paste(raw_lines, collapse = " ")
+# split each observation on name
+obs <- strsplit(all_text, " name ")[[1]]
+
+record_list <- map(obs, ~ {
+  toks <- strsplit(.x, "\\s+")[[1]] # split strings at whitespace
+  toks <- toks[toks != ""]  #empty token removal
+  stopifnot(length(toks) == 75)  
+  data.frame(matrix(toks, nrow = 1), 
+             stringsAsFactors = FALSE)
+})
+# bind the rows
+va_df_raw <- bind_rows(record_list)
+# assign column names but leave out name 
+colnames(va_df_raw) <- full_cols[1:75]
+```
+
+## Preprocessing 
+
+```{r}
+# set unused features as described in heart-disease.names
+unused_features <- c("id", "ccf", "junk", "cathef", "lvf", "lvx4", "lvx3",
+                     "lvx2", "lvx1", "dummy", "restckm", "exerckm", "thalsev",
+                     "thalpul", "earlobe")
+# remove the unused features from the data frame
+va_df <- va_df_raw %>%
+  select(-all_of(unused_features))
+# convert all to numeric, then specifically set categorical features.
+va_df <- va_df %>%
+  mutate(across(everything(), ~ as.numeric(.))
+         )
+# address missing values which are -9 and -9.0
+va_df <- va_df %>%
+  mutate(across(everything(), ~ na_if(., -9))) %>%
+  mutate(across(everything(), ~ na_if(., -9.0)))
+
+## categorical features and their levels and labels
+#sex
+va_df$sex <- factor(va_df$sex, 
+                    levels = c(0, 1), 
+                    labels = c("Female", "Male")
+                    )
+#painloc
+#unique(va_df$painloc)
+va_df$painloc <- factor(va_df$painloc,
+                        levels = c(0, 1), 
+                        labels = c("Otherwise", "Substernal")
+                        )
+#painexer
+#unique(va_df$painexer)
+va_df$painexer <- factor(va_df$painexer,
+                        levels = c(0, 1), 
+                        labels = c("Otherwise", "Provoked by Exertion")
+                        )
+#relrest
+#unique(va_df$relrest)
+va_df$relrest <- factor(va_df$relrest,
+                        levels = c(0, 1), 
+                        labels = c("Otherwise", "Relieved after rest")
+                        )
+#cp
+#unique(va_df$cp)
+va_df$cp <- factor(va_df$cp,
+                        levels = c(1, 2, 3, 4), 
+                        labels = c("Typical Angina", "Atypical Angina", 
+                                   "Non-anginal Pain", "Asymptomatic"), 
+                   ordered = TRUE)
+#smoke
+#unique(va_df$smoke)
+va_df$smoke <- factor(va_df$smoke,
+                        levels = c(0, 1), 
+                        labels = c("No", "Yes")
+                        )
+#fbs
+#unique(va_df$fbs)
+va_df$fbs <- factor(va_df$fbs,
+                        levels = c(0, 1), 
+                        labels = c("No", "Yes")
+                        )
+#dm
+#unique(va_df$dm)
+va_df$dm <- factor(va_df$dm,
+                        levels = c(0, 1), 
+                        labels = c("No", "Yes")
+                        )
+#famhist
+#unique(va_df$famhist)
+va_df$famhist <- factor(va_df$famhist,
+                        levels = c(0, 1), 
+                        labels = c("No", "Yes")
+                        )
+#famhist
+#unique(va_df$famhist)
+va_df$famhist <- factor(va_df$famhist,
+                        levels = c(0, 1), 
+                        labels = c("No", "Yes")
+                        )
+#restecg
+#unique(va_df$restecg)
+va_df$restecg <- factor(va_df$restecg,
+                        levels = c(0, 1, 2), 
+                        labels = c("Normal", "Abnormal", "Hypertrophy"), 
+                   ordered = TRUE)
+#dig
+#unique(va_df$dig)
+va_df$dig <- factor(va_df$dig,
+                        levels = c(0, 1), 
+                        labels = c("No", "Yes")
+                        )
+#prop
+#unique(va_df$prop)
+# find the number of 22's a feature outside the range/
+sum(va_df$prop == 22, na.rm = TRUE)
+# convert the 22 to NA
+va_df <- va_df %>%
+  mutate(prop = ifelse(prop == 22, NA, prop))
+#create factor
+va_df$prop <- factor(va_df$prop,
+                        levels = c(0, 1), 
+                        labels = c("No", "Yes")
+                        )
+#nitr
+#unique(va_df$nitr)
+va_df$nitr <- factor(va_df$nitr,
+                     levels = c(0, 1),
+                     labels = c("No", "Yes")
+                     )
+#pro
+#unique(va_df$pro)
+va_df$pro <- factor(va_df$pro,
+                     levels = c(0, 1),
+                     labels = c("No", "Yes")
+                     )
+#diuretic
+#unique(va_df$diuretic)
+va_df$diuretic <- factor(va_df$diuretic,
+                     levels = c(0, 1),
+                     labels = c("No", "Yes")
+                     )
+#proto
+#unique(va_df$proto)
+va_df$proto <- factor(va_df$proto,
+                     levels = c(0, 1),
+                     labels = c("No", "Yes")
+                     )
+#exang
+unique(va_df$exang)
+va_df$exang <- factor(va_df$exang,
+                     levels = c(0, 1),
+                     labels = c("No", "Yes")
+                     )
+#xhypo
+unique(va_df$xhypo)
+va_df$xhypo <- factor(va_df$xhypo,
+                     levels = c(0, 1),
+                     labels = c("No", "Yes")
+                     )
+#slope
+unique(va_df$slope)
+# check count of 0 valuyes
+sum(va_df$slope == 0, na.rm = TRUE)
+# replace 0 with NA
+va_df <- va_df %>%
+  mutate(slope = ifelse(slope == 0, NA, slope))
+# factor
+va_df$slope <- factor(va_df$slope,
+                     levels = c(1, 2, 3),
+                     labels = c("Upsloping", "Flat", "Downsloping"),
+                     ordered = TRUE
+                     )
+#restwm
+#unique(va_df$restwm)
+# check count of 0 valuyes
+# factor
+va_df$restwm <- factor(va_df$restwm,
+                     levels = c(0, 1, 2, 3),
+                     labels = c("None", "Mild/Moderate", "Moderate/Severe", 
+                                "Akinesis"),
+                     ordered = TRUE
+                     )
+#thal
+unique(va_df$thal)
+# examine 1, 2, 5 values which are not in the documentation
+# check count of 1,2,5 values
+#sum(va_df$thal == 1, na.rm = TRUE)
+#sum(va_df$thal == 2, na.rm = TRUE)
+#sum(va_df$thal == 5, na.rm = TRUE)
+# replace 1, 2, 5 with na
+va_df <- va_df %>%
+  mutate(thal = ifelse(thal == 1, NA, thal)) %>%
+  mutate(thal = ifelse(thal == 2, NA, thal)) %>%
+  mutate(thal = ifelse(thal == 5, NA, thal))
 
 ```
 
