--- a/Notebooks/raw_EDA_merged.Rmd
+++ b/Notebooks/raw_EDA_merged.Rmd
@@ -139,7 +139,35 @@ va_df_raw$location <- "VA Long Beach"
 #### Hungary
 
 ```{r Hungary_data_importing}
+lines <- readLines(here("Data", "Raw/hungarian.data"))
 
+# Step 2: Combine every 10 lines per patient
+patient_blocks <- split(lines, ceiling(seq_along(lines) / 10))
+
+# Step 3: Parse each block into numeric + name
+records <- map(patient_blocks, function(block) {
+  tokens <- str_split(paste(block, collapse = " "), "\\s+")[[1]]
+  name_value <- tail(tokens, 1)                      # last value is the name
+  numeric_values <- as.numeric(tokens[-length(tokens)])
+  c(numeric_values, name_value)                     # combine numeric + name
+})
+
+# Step 4: Combine into data frame
+hu_df_raw <- do.call(rbind, records) %>% 
+  as.data.frame(stringsAsFactors = FALSE)
+hu_df_raw <- hu_df_raw %>% slice(-295)    ## sliced out the blank row 295th
+dim(hu_df_raw)
+
+# Step 5: Assign column names
+colnames(hu_df_raw) <- full_cols
+
+# Step 6: Replace -9 with NA
+hu_df_raw <- hu_df_raw %>%
+  mutate(across(where(is.character), ~ na_if(.x, "-9"))) %>%   # character cols
+  mutate(across(where(is.numeric), ~ na_if(.x, -9))) %>%       # numeric columns
+  mutate(location = "Hungary")
+
+head(hu_df_raw)
 ```
 
 #### Switzerland
@@ -175,4 +203,9 @@ sw_df_raw <- sw_df_raw %>%
 
 head(sw_df_raw)
 ```
+
+
 ``` {r }
+
+
+```
