--- a/Notebooks/raw_EDA_merged.Rmd
+++ b/Notebooks/raw_EDA_merged.Rmd
@@ -20,6 +20,7 @@ library(corrplot)
 library(readr)
 library(dplyr)
 library(here)
+library(caret)
 ```
 
 ```{r global_variables}
@@ -249,7 +250,7 @@ merged_df <- bind_rows(clvd_df_raw,
                        hu_df_raw,
                        sw_df_raw,
                        va_df_raw)
-#merged_df
+merged_df
 ```
 
 
@@ -258,15 +259,76 @@ merged_df <- bind_rows(clvd_df_raw,
 
 ```{r data_cleaning}
 # remove unnecessary columns
+# cols marked as not used or dummy variables
+not_used_dummy_var <- c(
+  "id", "ccf", "dummy", "trestbpd", "restckm", "exerckm", "thalsev", "thalpul",
+  "earlobe", "lvx1", "lvx2", "lvx3", "lvx4", "lvf", "cathef", "junk", "name"
+)
 
+df_cleaning <- merged_df %>%
+  select(-all_of(not_used_dummy_var))
+
+# convert -9 to NA
+df_cleaning <- df_cleaning %>%
+  mutate(across(where(is.character), ~ na_if(.x, "-9"))) %>%   # character columns
+  mutate(across(where(is.numeric), ~ na_if(.x, -9)))           # numeric columns
+
+sum(is.na(df_cleaning))
+df_cleaning %>% dim
+df_cleaning %>% head()
+
+# calculate percentage missing
+missing_threshold <- 60
+missing_pct <- df_cleaning %>%
+  summarise(across(everything(), ~ mean(is.na(.)) * 100)) %>%
+  pivot_longer(everything(), names_to = "column", values_to = "missing_percent") %>%
+  arrange(desc(missing_percent))
+
+# filter by col missing
+missing_cols <- missing_pct %>%
+  filter(missing_percent > missing_threshold)
+var_missing_gt_60 <- missing_cols$column
+
+missing_cols
+# drop cols missing greater than threshold
+df_cleaning <- df_cleaning %>%
+  select(-all_of(var_missing_gt_60))
+dim(df_cleaning)
+
+# check near zero variance vars
+nzv_cols <- nearZeroVar(df_cleaning %>% 
+    select(-num), saveMetrics = TRUE)
+nzv_cols %>% filter(nzv == TRUE)
+
+# get column names of nzv
+nzv_names <- nzv_cols %>%
+  filter(nzv ==TRUE) %>%
+  rownames()
+nzv_names
+
+# remove nzv variables
+df_cleaning <- df_cleaning %>%
+  select(-all_of(nzv_names))
+
+# add back ca column for EDA
+df_cleaning$ca <- merged_df$ca
+df_cleaning$ca <- na_if(df_cleaning$ca, "-9")
+
+dim(df_cleaning)
+
+# export to file
+write.csv(df_cleaning, here("Data/Clean", "heart_disease_cleaned.csv"), row.names = FALSE)
 ```
 
-
+In the process of removing variables with >60% missing data, the `ca`
+variable, which represents _Major vessels via fluoroscopy_ was removed
+due to having 67.6% missing data. This variable was part of the 
+_cleveland-14_ set. It has re-added to the final dataset after _nzv_ variables
+were removed. 
 
 ## Exploratory Data Analysis
 
 ```{r EDA}
-
 
 ```
 
